feat: added roles field
